# X-bookmark-Management-

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  celerybeat-schedule  deploy.sh  descv1.md  descv2.md  docker-compose.dev.yml  docker-compose.yml  frontend.html  frontend.py  migrate.sh  pyproject.toml  readme.md  requirements.txt
backend/: Dockerfile  celerybeat-schedule  decisions.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3d9db9dc9992_add_admin_fields_and_tables.py  4b9649897d8c_is_backfill_complete_column.py  748419a1e4ab_add_user_info_fields_to_users_table.py  78c2e346713f_add_front_sync_token_and_next_token_to_.py  a19ae2bdd988_add_default_value_for_next_token_column.py  a348b1865f9e_add_tweet_type_and_referenced_tweet_id.py  a8793833394f_drop_next_token_from_bookmarks.py  b18c2a91ef99_add_is_read_column_to_bookmarks.py  b85ecd257649_drop_next_token_from_bookmarks.py  bf87436890cd_added_next_token_column_to_store_.py  d4d56841fe83_update_datetime_columns_to_timezone_.py  d96bc9b69c92_drop_erroneous_unique_constraints_on_.py  e7e83cf00f6a_author_id_on_post_table_is_nullable.py  e7edf8e9a7b3_added_media_tables_for_handling_medias.py  ef32cbbd722d_add_user_info_fields_to_users_table.py  ef709bb5f5ee_add_front_watermark_id_and_cleanup.py
backend/observability/: otel-collector.yaml
backend/src/: main.py
backend/src/celery/: celery.py  task.py
backend/src/utils/: config.py  db.py  exception.py  log.py  redis.py  retry.py  telemetry.py  xdk_client.py
backend/tests/: test_callback_endpoint.py
docs/: OTel → Loki Log Pipeline.md  bookmark-post-id-type-mismatch-fix.md  bookmark-refresh-fix.md  bookmark-sync-engineering.md  celery-task-accumulation-fix.md  celery-worker-oom-fix.md  collison.md  docker-setup.md  sync-architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: admin.ts  client.ts
frontend/src/hooks/: useAuth.ts  useTheme.ts
migrations/versions/: c74a455f404c_add_last_front_sync_time_to_users_table.py
nginx/: nginx.conf
nginx/conf.d/: savestack.conf
observability/: otel-collector.yaml  prometheus.yaml
scripts/: migrate.sh
src/: main.py
src/celery/: celery.py  celery_config.py  task.py
src/utils/: config.py  db.py  exception.py  log.py  redis.py  telemetry.py
tests/: test_logging.py  test_structlog_migration.py
(+109 files in other folders)
