[project]
name = "xfeeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref>=3.9.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[all]>=0.115.12",
    "flower>=2.0.1",
    "gevent>=25.8.2",
    "sqlalchemy>=2.0.40",
    "tweepy[async]>=4.15.0",
    "xdk>=0.5.0",
]

[dependency-groups]
dev = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "alembic==1.16.4",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-lru==2.0.5",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "billiard==4.2.1",
    "celery==5.5.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.7",
    "frozenlist==1.6.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "kombu==5.5.4",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.4.3",
    "oauthlib==3.2.2",
    "orjson==3.10.18",
    "packaging==25.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.4",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==14.0.0",
    "rich-toolkit==0.14.5",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "starlette==0.46.2",
    "tomli==2.2.1",
    "tweepy==4.15.0",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yarl==1.20.0",
]
